# Camera-Module

./: .gitignore  README.md
Astra/: CMakeLists.txt  README.md  main.cpp
Astra/src/: .imagedeal.cpp.kate-swp  filedeal.cpp  filedeal.h  imagedeal.cpp  imagedeal.h
D435/: CMakeLists.txt  README.md  main.cpp
D435/src/: camera.cpp  camera.h  filedeal.cpp  filedeal.h
Kinect/: CMakeLists.txt  README.md
Kinect/src/: image.cpp  image.h  main.cpp
