cmake_minimum_required(VERSION 2.6)
set(PROJECT_NAME d435)
project(${PROJECT_NAME})
  set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -march=native -O3 -pthread" )
find_package(OpenCV REQUIRED)
set(libPathD435 "/usr/local/lib")
link_directories(${LibPATHD435})
include_directories(src/)
file(GLOB DIR_SRCS "src/*.cpp")

add_executable(${PROJECT_NAME} main.cpp ${DIR_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} "/usr/local/lib/librealsense2.so")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})
install(TARGETS d435 RUNTIME DESTINATION bin)